--- a/components/meetups/MeetupItem.module.scss
+++ b/components/meetups/MeetupItem.module.scss
@@ -30,10 +30,15 @@
   justify-content: center;
   overflow: hidden;
   margin-right: 10px;
+
+  @media (min-width: $viewport-mobile-md) {
+    margin-right: 14px;
+  }
 }
 
 .meetupItem__img {
   transform: scale(2);
+  width: 50px;
 }
 
 .meetupItem__info__title {
